[SCB-5] Fix modal scroll on mobile when modal is open from other modal - added styling to enable scroll

--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -217,3 +217,9 @@ p.add-goal.btn.team-selected span.name {
     font-size: 30px;
 }
 
+
+/* fixing scroll on modal which is open from other modal */
+.modal.fade.in {
+    overflow-x: hidden;
+    overflow-y: auto;
+}
